# De-Qwen-SFT

./: README.md  README_AGENT_SYSTEM.md  best_direct_lstm_full_weekly_max_h4_win12.pth  generate_diverse_qa_dataset.py  merge_lora.py  modeling.ipynb  power_demand_sft.ipynb  pyproject.toml  report_prompt_template.py  serve_vllm.py  sft_dataset.jsonl  test_auto_forecast.py  test_sft_model.py
2019_md/: power_demand_2019-01.md  power_demand_2019-02.md  power_demand_2019-03.md  power_demand_2019-04.md  power_demand_2019-05.md  power_demand_2019-06.md  power_demand_2019-07.md  power_demand_2019-08.md  power_demand_2019-09.md  power_demand_2019-10.md  power_demand_2019-11.md  power_demand_2019-12.md
2020_md/: power_demand_2020-01.md  power_demand_2020-02.md  power_demand_2020-03.md  power_demand_2020-04.md  power_demand_2020-05.md  power_demand_2020-06.md  power_demand_2020-07.md  power_demand_2020-08.md  power_demand_2020-09.md  power_demand_2020-10.md  power_demand_2020-11.md  power_demand_2020-12.md
2021_md/2021_01/: 2021_01.md
2021_md/2021_02/: 2021_02.md
2021_md/2021_03/: 2021_03.md
2021_md/2021_04/: 2021_04.md
generated_reports/: power_demand_report_2024_08_20260108_113623.md  power_demand_report_2025_01_20260108_114034.md  power_demand_report_2025_01_20260108_142405.md  power_demand_simple_2024_08_20260108_113623.md  power_demand_simple_2025_01_20260108_114034.md  power_demand_simple_2025_01_20260108_142405.md
report_agent/: README.md  generate_report.py  main.py  mcp_client.py  mcp_client_pure.py  report_generator.py  report_service.py  test_system.py
(+162 files in other folders)
