[project]
name = "de-llama"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "hf-transfer>=0.1.9",
    "huggingface-hub[cli]>=0.36.0",
    "ipykernel>=7.1.0",
    "openai>=2.14.0",
    "peft>=0.18.0",
    "sentencepiece>=0.2.1",
    "torch>=2.9.1",
    "tqdm>=4.66.0",
    "transformers>=4.57.3",
    "trl>=0.26.2",
]
